--- a/main.tex
+++ b/main.tex
@@ -175,7 +175,7 @@ only when h(n) is bounded i.e
 \implies \abs{H(z)}_{\abs{z}=1}&<\infty
 \end{align}
 
-\textbf{Conclusion : For a stable system, ROC of system must include unit circle}
+\textbf{Conclusion : For a stable system, ROC of the system must include unit circle}
 
 Given the following difference equation
 
