--- a/main.tex
+++ b/main.tex
@@ -230,7 +230,7 @@ Let us assume a bounded input
 
 Clearly x(n) is absolutely summable
 
-We can calculate y(n) and plot is using python
+We can calculate y(n) using the difference equation
 
 Use the following code to plot Input, Output and Impulse Response
 \\
